--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,14 @@
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#ffffff" />
     <link rel="manifest" href="/manifest.json" />
     <meta httpEquiv="X-UA-Compatible" content="IE=edge"/>
-    <meta name="description" content="wedding vendor directory HTML template"/>
-    <title>Wedding Vendor &amp; Supplier Directory HTML Template - Moments</title>
+    <meta name="description" content="wedding vendor directory"/>
+    <title>Wedding Vendor &amp; Supplier Directory - Moments</title>
 
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/z-font.css" rel="stylesheet">
     <link href="/fontawesome/css/fontawesome-all.css" rel="stylesheet">
     <link href="/fontello/css/fontello.css" rel="stylesheet">
     <script src="/js/jquery.min.js"/>
